--- a/Objects.tex
+++ b/Objects.tex
@@ -160,7 +160,7 @@ Supersymmetric models or other scenarios describing physics beyond the Standard 
   \label{fig:boosted_top}
 \end{figure}
 \\
-As discussed in Sec.~\ref{subsec:susy_collider}, the decay of the top-quark is experimentally characterized by the decay of the W boson which makes two thirds of top quark decays resulting exclusively in hadrons. This decay mode is here referred to as \textit{hadronic top}. If top quarks are produced with $\pt \ll m_t$, the top quark decay products show up as distinct objects in the detector. In the case of hadronic tops, these are well separated jets. However, if the top transverse momentum is high, the decay products are \textit{boosted}, \ie they have large Lorentz boost, and thus are collimated in the forward direction. Consequently, they might overlap and merge into a single large jet (\textit{fat jet}). The opening angle of the decay products $\Delta R$ is expected to scale as
+As discussed in Sec.~\ref{subsubsec:susy_backgrounds}, the decay of the top-quark is experimentally characterized by the decay of the W boson which makes two thirds of top quark decays resulting exclusively in hadrons. This decay mode is here referred to as \textit{hadronic top}. If top quarks are produced with $\pt \ll m_t$, the top quark decay products show up as distinct objects in the detector. In the case of hadronic tops, these are well separated jets. However, if the top transverse momentum is high, the decay products are \textit{boosted}, \ie they have large Lorentz boost, and thus are collimated in the forward direction. Consequently, they might overlap and merge into a single large jet (\textit{fat jet}). The opening angle of the decay products $\Delta R$ is expected to scale as
 \begin{equation}
  \Delta R \approx 2\,m_{t} /\pt
  \label{eq:rule-of-thumb}
