--- a/Stop.tex
+++ b/Stop.tex
@@ -1,15 +1,15 @@
-The second run period of the LHC, starting in 2015 at a centre of mass energy of $\sqrt{s} = 13$\tev, provides the excellent opportunity to further investigate the question if supersymmetry is realised in nature at the \tev scale. As discussed in Section~\ref{sec:susy_status}, the current limits exclude stop quarks with masses up to around 750\gev for LSP masses below 100\gev in case of direct stop production. Since for natural supersymmetry the stop quark mass is expected to not exceed 1\tev significantly, it is of particular interest to probe the stop mass range above 750\gev during the next run period of the LHC. The targeted process of this analysis is illustrated in a diagram in Fig.~\ref{fig:T2tt} below.  
-\begin{figure}[!h]
-  \centering
-  \begin{tabular}{c}
-                \includegraphics[width=0.68\textwidth]{figures/T2tt.pdf} 
-  \end{tabular}
-  \caption{Schematic diagram of the direct pair production of stop quarks in \pp collisions with subsequent decay into a top quark and the LSP. Taken from~\cite{bib:CMS:PhysicsResultsSUS}. }
-  \label{fig:T2tt}
-\end{figure}
-\\   
-Here, the pair production of stop quarks is shown with subsequent decay into a top quark and a neutralino LSP. Since each of the top quarks decays into a $b$ quark and a $W$ boson, the final state signature further depends on the decay modes of the $W$ bosons. In this analysis, only final states with fully hadronic top quark decays are considered. Consequently, this analysis targets a jet final state accompanied by missing transverse energy caused by the LSPs. As discussed in Section~\ref{subsec:susy_collider}, background contributions from the SM to such signatures arise mainly from QCD multijet events, \WJets, \ZJets and \ttbar events. \\
-In this chapter, various analysis strategies for a search for stop quarks at $\sqrt{s} = 13$\tev are discussed and compared in order to address mass scenarios with large mass differences between the stop quark mass and the LSP. Furthermore, the performance of new selections is compared to the existing all-hadronic stop search performed by the CMS experiment at $\sqrt{s} = 8$\tev which is published in~\cite{CMS-PAS-SUS-13-015} and denoted \textit{SUS-13-015} in the following. In addition, it is interesting to study if selections that are developed for a search for direct stop production are also sensitive to gluino-mediated production of third generation quarks. 
+The second run period of the LHC, starting in 2015 at a centre of mass energy of $\sqrt{s} = 13$\tev, provides the excellent opportunity to further investigate the question if supersymmetry is realised in nature at the \tev scale. As discussed in Section~\ref{sec:susy_status}, the current limits exclude stop quarks with masses up to around 750\gev for LSP masses below 100\gev in case of direct stop production. Since for natural supersymmetry the stop quark mass is expected to not exceed 1\tev significantly, it is of particular interest to probe the stop mass range above 750\gev during the next run period of the LHC. \\
+%The targeted process of this analysis is illustrated in a diagram in Fig.~\ref{fig:T2tt} below.  
+%\begin{figure}[!h]
+%  \centering
+%  \begin{tabular}{c}
+%                \includegraphics[width=0.68\textwidth]{figures/T2tt.pdf} 
+%  \end{tabular}
+%  \caption{Schematic diagram of the direct pair production of stop quarks in \pp collisions with subsequent decay into a top quark and the LSP. Taken from~\cite{bib:CMS:PhysicsResultsSUS}. }
+%  \label{fig:T2tt}
+%\end{figure}  
+The targeted process of this analysis has been introduced in Fig.~\ref{fig:susy_decay} where the pair production of stop quarks is shown with subsequent decay into a top quark and a neutralino LSP. Since each of the top quarks decays into a $b$ quark and a $W$ boson, the final state signature further depends on the decay modes of the $W$ bosons. In this analysis, only final states with fully hadronic top quark decays are considered. Consequently, this analysis targets a jet final state accompanied by missing transverse energy caused by the LSPs. As discussed in Sec.~\ref{subsubsec:susy_backgrounds}, background contributions from the SM to such signatures arise mainly from QCD multijet events, \WJets, \ZJets and \ttbar events. \\
+In this chapter, various analysis strategies for a search for stop quarks at $\sqrt{s} = 13$\tev are discussed and compared in order to address mass scenarios with large mass differences between the stop quark mass and the LSP. Furthermore, the performance of new selections is compared to the existing all-hadronic stop search performed by the CMS experiment at $\sqrt{s} = 8$\tev which is published in~\cite{CMS-PAS-SUS-13-015} and denoted \textit{SUS-13-015} in the following. In addition, it is interesting to study if selections that are developed for a search for direct stop production are also sensitive to gluino-mediated production of third generation quarks.   
 
 \section{Data Samples}
 \label{sec:stop_samples}
@@ -183,7 +183,7 @@ Based on the selected event yields and the estimated uncertainties, the 95\% con
 
 \section{Sensitivity Improvement using B Tagging}
 \label{sec:stop_btagging}
-As illustrated in Fig.~\ref{fig:T2tt}, the targeted signal final state involves the presence of bottom quarks emerging from the decay of the top quarks. Thus, an obvious option to enhance the sensitivity of such an analysis is to employ b-tagging techniques to identify b quarks in the final state. Typical b-tagging algorithms for the identification of b-quark jets used within the CMS experiment have been discussed in Section~\ref{sec:btagging}. \\
+As discussed above, the targeted signal final state involves the presence of bottom quarks emerging from the decay of the top quarks. Thus, an obvious option to enhance the sensitivity of such an analysis is to employ b-tagging techniques to identify b quarks in the final state. Typical b-tagging algorithms for the identification of b-quark jets used within the CMS experiment have been discussed in Section~\ref{sec:btagging}. \\
 In this analysis, b-quark jets are identified based on the CSV algorithm using the medium working point. Furthermore, they are required to have \pt$> 30$\gev in order to be not sensitive to potentially large flavour-dependent JEC uncertainties for jet transverse momenta smaller than 30\gev. In Fig.~\ref{fig:stop_baseline_btag}, the b-tag multiplicity, \ie the number of b-tagged jets in the event, is illustrated.  %As expected the maximum of this distribution for signal and \ttbar events is around two, since two b-quark jets are expected from the two decaying top quarks. \\ %Values above two or b-tagged jets in backgrounds not containing real b-quarks can be explained by the misidentification rate of the tagging algorithm. \\ 
 When imposing in addition to the baseline selection also a requirement of at least one b-tagged jet, the total signal efficiencies for the signal samples with stop masses of 600\gev and 1100\gev decrease from around 30\% and 48\% to 25\% and 38\%, respectively. However, also the total background efficiency decreases significantly from $1.2 \cdot 10^{-7}$ to $3.6 \cdot 10^{-8}$. Concerning background events, the main reduction occurs for \WJets, \ZJets and QCD events as these contain in most cases no b-tagged jet. The relative background composition after applying the b-tag requirement is: 77.5\% \ttbar, 8.8\% \WJets, 8.6\% \ZJets and 5.1\% QCD.        
 \begin{figure}[!t]
@@ -508,8 +508,8 @@ The limit curves exhibit that the selection based on the requirements used in SU
 In order to study the stability of the sensitivity of the identified selection towards the assumed background uncertainties, the expected limit for the selection using the baseline requirements, at least one CMS top tag and $m_\mathrm{T} > 180$\gev is evaluated when varying the assumed \ttbar uncertainty. \\
 %The behaviour concerning the binning of the search regions is studied by dividing the region $ 200 < \met < 400$\gev into two: $ 200 < \met < 300$\gev and $ 300 < \met < 400$\gev. Here, the systematic uncertainties are considered as before. \\
 The dependence on the assumed uncertainties is studied by increasing the uncertainties considered for \ttbar from 20\% to 50\% while others stay unchanged. Since for this selection \ttbar is the main background, the variation of the \ttbar uncertainty is expected to cause the largest deviation. 
-The expected limits derived using the nominal and the increased \ttbar uncertainty are illustrated in Fig.~\ref{fig:stop_varied_limit}. It turns out that the resulting change for the sensitivity caused by this variation is small and only impacts small stop quark masses.  
-\begin{figure}[!b]
+The expected limits derived using the nominal and the increased \ttbar uncertainty are illustrated in Fig.~\ref{fig:stop_varied_limit}. The resulting change for the sensitivity caused by this variation is small and only impacts small stop quark masses.      
+\begin{figure}[!h]
   \centering
   \begin{tabular}{c}
                 \includegraphics[width=0.49\textwidth]{figures/limitplot4BinSel_SystVariation_LSP50.pdf} 
