--- a/Thesis.bib
+++ b/Thesis.bib
@@ -974,6 +974,96 @@ to 10\fbinv of Data",
       SLACcitation   = "%%CITATION = HEP-PH/0404175;%%",
 }
 
+@article{PhysRevLett.109.181301,
+  title = {Dark Matter Results from 225 Live Days of XENON100 Data},
+  author = {Aprile, E. and Alfonsi, M. and Arisaka, K. and Arneodo, F. and Balan, C. and Baudis, L. and Bauermeister, B. and Behrens, A. and Beltrame, P. and Bokeloh, K. and Brown, E. and Bruno, G. and Budnik, R. and Cardoso, J. and Chen, W.-T. and Choi, B. and Cline, D. and Colijn, A. and Contreras, H. and Cussonneau, J. and Decowski, M. and Duchovni, E. and Fattori, S. and Ferella, A. and Fulgione, W. and Gao, F. and Garbini, M. and Ghag, C. and Giboni, K.-L. and Goetzke, L. and Grignon, C. and Gross, E. and Hampel, W. and Kaether, F. and Kish, A. and Lamblin, J. and Landsman, H. and Lang, R. and Le Calloch, M. and Levy, C. and Lim, K. and Lin, Q. and Lindemann, S. and Lindner, M. and Lopes, J. and Lung, K. and Marrod\'an Undagoitia, T. and Massoli, F. and Melgarejo Fernandez, A. and Meng, Y. and Molinario, A. and Nativ, E. and Ni, K. and Oberlack, U. and Orrigo, S. and Pantic, E. and Persiani, R. and Plante, G. and Priel, N. and Rizzo, A. and Rosendahl, S. and dos Santos, J. and Sartorelli, G. and Schreiner, J. and Schumann, M. and Scotto Lavina, L. and Scovell, P. and Selvi, M. and Shagin, P. and Simgen, H. and Teymourian, A. and Thers, D. and Vitells, O. and Wang, H. and Weber, M. and Weinheimer, C.},
+  collaboration = {XENON100},
+  journal = {Phys. Rev. Lett.},
+  volume = {109},
+  issue = {18},
+  pages = {181301},
+  numpages = {6},
+  year = {2012},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.109.181301},
+  url = {http://link.aps.org/doi/10.1103/PhysRevLett.109.181301}
+}
+
+@article{Agnese:2013jaa,
+      author         = "Agnese, R. and others",
+      title          = "{Search for Low-Mass Weakly Interacting Massive Particles
+                        Using Voltage-Assisted Calorimetric Ionization Detection
+                        in the SuperCDMS Experiment}",
+      collaboration  = "SuperCDMS",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "112",
+      pages          = "041302",
+      doi            = "10.1103/PhysRevLett.112.041302",
+      year           = "2014",
+      eprint         = "1309.3259",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "FERMILAB-PUB-13-572-AE",
+      SLACcitation   = "%%CITATION = ARXIV:1309.3259;%%",
+}
+
+@article{PhysRevLett.113.121101,
+  title = {High Statistics Measurement of the Positron Fraction in Primary Cosmic Rays of 0.5--500 GeV with the Alpha Magnetic Spectrometer on the International Space Station},
+  author = {Accardo, L. and Aguilar, M. and Aisa, D. and Alpat, B. and Alvino, A. and Ambrosi, G. and Andeen, K. and Arruda, L. and Attig, N. and Azzarello, P. and Bachlechner, A. and Barao, F. and Barrau, A. and Barrin, L. and Bartoloni, A. and Basara, L. and Battarbee, M. and Battiston, R. and Bazo, J. and Becker, U. and Behlmann, M. and Beischer, B. and Berdugo, J. and Bertucci, B. and Bigongiari, G. and Bindi, V. and Bizzaglia, S. and Bizzarri, M. and Boella, G. and de Boer, W. and Bollweg, K. and Bonnivard, V. and Borgia, B. and Borsini, S. and Boschini, M. J. and Bourquin, M. and Burger, J. and Cadoux, F. and Cai, X. D. and Capell, M. and Caroff, S. and Carosi, G. and Casaus, J. and Cascioli, V. and Castellini, G. and Cernuda, I. and Cerreta, D. and Cervelli, F. and Chae, M. J. and Chang, Y. H. and Chen, A. I. and Chen, H. and Cheng, G. M. and Chen, H. S. and Cheng, L. and Chikanian, A. and Chou, H. Y. and Choumilov, E. and Choutko, V. and Chung, C. H. and Cindolo, F. and Clark, C. and Clavero, R. and Coignet, G. and Consolandi, C. and Contin, A. and Corti, C. and Coste, B. and Cui, Z. and Dai, M. and Delgado, C. and Della Torre, S. and Demirk\"oz, M. B. and Derome, L. and Di Falco, S. and Di Masso, L. and Dimiccoli, F. and D\'\iaz, C. and von Doetinchem, P. and Du, W. J. and Duranti, M. and D'Urso, D. and Eline, A. and Eppling, F. J. and Eronen, T. and Fan, Y. Y. and Farnesini, L. and Feng, J. and Fiandrini, E. and Fiasson, A. and Finch, E. and Fisher, P. and Galaktionov, Y. and Gallucci, G. and Garc\'\ia, B. and Garc\'\ia-L\'opez, R. and Gast, H. and Gebauer, I. and Gervasi, M. and Ghelfi, A. and Gillard, W. and Giovacchini, F. and Goglov, P. and Gong, J. and Goy, C. and Grabski, V. and Grandi, D. and Graziani, M. and Guandalini, C. and Guerri, I. and Guo, K. H. and Haas, D. and Habiby, M. and Haino, S. and Han, K. C. and He, Z. H. and Heil, M. and Henning, R. and Hoffman, J. and Hsieh, T. H. and Huang, Z. C. and Huh, C. and Incagli, M. and Ionica, M. and Jang, W. Y. and Jinchi, H. and Kanishev, K. and Kim, G. N. and Kim, K. S. and Kirn, Th. and Kossakowski, R. and Kounina, O. and Kounine, A. and Koutsenko, V. and Krafczyk, M. S. and Kunz, S. and La Vacca, G. and Laudi, E. and Laurenti, G. and Lazzizzera, I. and Lebedev, A. and Lee, H. T. and Lee, S. C. and Leluc, C. and Levi, G. and Li, H. L. and Li, J. Q. and Li, Q. and Li, Q. and Li, T. X. and Li, W. and Li, Y. and Li, Z. H. and Li, Z. Y. and Lim, S. and Lin, C. H. and Lipari, P. and Lippert, T. and Liu, D. and Liu, H. and Lolli, M. and Lomtadze, T. and Lu, M. J. and Lu, Y. S. and Luebelsmeyer, K. and Luo, F. and Luo, J. Z. and Lv, S. S. and Majka, R. and Malinin, A. and Ma\~n\'a, C. and Mar\'\in, J. and Martin, T. and Mart\'\inez, G. and Masi, N. and Massera, F. and Maurin, D. and Menchaca-Rocha, A. and Meng, Q. and Mo, D. C. and Monreal, B. and Morescalchi, L. and Mott, P. and M\"uller, M. and Ni, J. Q. and Nikonov, N. and Nozzoli, F. and Nunes, P. and Obermeier, A. and Oliva, A. and Orcinha, M. and Palmonari, F. and Palomares, C. and Paniccia, M. and Papi, A. and Pauluzzi, M. and Pedreschi, E. and Pensotti, S. and Pereira, R. and Pilastrini, R. and Pilo, F. and Piluso, A. and Pizzolotto, C. and Plyaskin, V. and Pohl, M. and Poireau, V. and Postaci, E. and Putze, A. and Quadrani, L. and Qi, X. M. and Rancoita, P. G. and Rapin, D. and Ricol, J. S. and Rodr\'\iguez, I. and Rosier-Lees, S. and Rossi, L. and Rozhkov, A. and Rozza, D. and Rybka, G. and Sagdeev, R. and Sandweiss, J. and Saouter, P. and Sbarra, C. and Schael, S. and Schmidt, S. M. and Schuckardt, D. and Schulz von Dratzig, A. and Schwering, G. and Scolieri, G. and Seo, E. S. and Shan, B. S. and Shan, Y. H. and Shi, J. Y. and Shi, X. Y. and Shi, Y. M. and Siedenburg, T. and Son, D. and Spada, F. and Spinella, F. and Sun, W. and Sun, W. H. and Tacconi, M. and Tang, C. P. and Tang, X. W. and Tang, Z. C. and Tao, L. and Tescaro, D. and Ting, Samuel C. C. and Ting, S. M. and Tomassetti, N. and Torsti, J. and T\"urko\ifmmode \breve{g}\else \u{g}\fi{}lu, C. and Urban, T. and Vagelli, V. and Valente, E. and Vannini, C. and Valtonen, E. and Vaurynovich, S. and Vecchi, M. and Velasco, M. and Vialle, J. P. and Vitale, V. and Volpini, G. and Wang, L. Q. and Wang, Q. L. and Wang, R. S. and Wang, X. and Wang, Z. X. and Weng, Z. L. and Whitman, K. and Wienkenh\"over, J. and Wu, H. and Wu, K. Y. and Xia, X. and Xie, M. and Xie, S. and Xiong, R. Q. and Xin, G. M. and Xu, N. S. and Xu, W. and Yan, Q. and Yang, J. and Yang, M. and Ye, Q. H. and Yi, H. and Yu, Y. J. and Yu, Z. Q. and Zeissler, S. and Zhang, J. H. and Zhang, M. T. and Zhang, X. B. and Zhang, Z. and Zheng, Z. M. and Zhou, F. and Zhuang, H. L. and Zhukov, V. and Zichichi, A. and Zimmermann, N. and Zuccon, P. and Zurbach, C.},
+  collaboration = {AMS},
+  journal = {Phys. Rev. Lett.},
+  volume = {113},
+  issue = {12},
+  pages = {121101},
+  numpages = {9}, 
+  year = {2014},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.113.121101},
+  url = {http://link.aps.org/doi/10.1103/PhysRevLett.113.121101}
+}
+
+@article{Angloher:2014myn,
+      author         = "Angloher, G. and others",
+      title          = "{Results on low mass WIMPs using an upgraded CRESST-II
+                        detector}",
+      collaboration  = "CRESST-II",
+      journal        = "",
+      year           = "2014",
+      eprint         = "1407.3146",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1407.3146;%%",
+}
+
+@article{Ackermann:2013uma,
+      author         = "Ackermann, M. and others",
+      title          = "{Search for Gamma-ray Spectral Lines with the Fermi Large
+                        Area Telescope and Dark Matter Implications}",
+      collaboration  = "Fermi-LAT Collaboration",
+      journal        = "Phys. Rev. D",
+      volume         = "88",
+      pages          = "082002",
+      doi            = "10.1103/PhysRevD.88.082002",
+      year           = "2013",
+      eprint         = "1305.5597",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1305.5597;%%",
+}
+
+@article{Abramowski:2014tra,
+      author         = "Abramowski, A. and others",
+      title          = "{Search for dark matter annihilation signatures in
+                        H.E.S.S. observations of Dwarf Spheroidal Galaxies}",
+      journal        = "",
+      collaboration  = "HESS",
+      year           = "2014",
+      eprint         = "1410.2589",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1410.2589;%%",
+}
+
 @article{cerdeno2010direct,
   title={Direct detection of WIMPs},
   author={Cerdeno, David G and Green, Anne M},
@@ -1684,21 +1774,55 @@ URL = {http://www.annualreviews.org/doi/abs/10.1146/annurev-astro-082708-101659}
 @Article{Zeus:2006je,
      author    = "Chekanov, S. and others",
  collaboration = "ZEUS",
-     title     = "Search for Stop Production in {R}-Parity-Violating
-                  Supersymmetry at {HERA}",
+     title     = "Search for stop production in {R}-parity-violating
+                  supersymmetry at {HERA}",
      journal   = "Eur. Phys. J. C",
      volume    = "50",
      year      = "2007",
-     pages     = "269",
+     pages     = "269--281",
      eprint    = "hep-ex/0611018",
      archivePrefix = "arXiv",
      doi       = "10.1140/epjc/s10052-007-0240-8",
      SLACcitation  = "%%CITATION = HEP-EX/0611018;%%"
 }
+
+@article{Aktas:2004ij,
+      author         = "Aktas, A. and others",
+      title          = "{Search for squark production in R-parity-violating
+                        supersymmetry at HERA}",
+      collaboration  = "H1",
+      journal        = "Eur. Phys. J. C",
+      volume         = "36",
+      pages          = "425--440",
+      year           = "2004",
+      eprint         = "hep-ex/0403027",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "DESY-04-025",
+      SLACcitation   = "%%CITATION = HEP-EX/0403027;%%",
+}
+
+@article{Aktas:2004tm,
+      author         = "Aktas, A. and others",
+      title          = "{Search for bosonic stop decays in R-parity-violating
+                        supersymmetry in $e^+p$ collisions at HERA}",
+      collaboration  = "H1",
+      journal        = "Phys. Lett. B",
+      volume         = "599",
+      pages          = "159--172",
+      doi            = "10.1016/j.physletb.2004.08.032",
+      year           = "2004",
+      eprint         = "hep-ex/0405070",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "DESY-04-084",
+      SLACcitation   = "%%CITATION = HEP-EX/0405070;%%",
+}
+
 @Article{Aid:1996es,
      author    = "Aid, S. and others",
  collaboration = "H1",
-     title     = "A Search for Selectrons and Squarks at {HERA}",
+     title     = "A search for selectrons and squarks at {HERA}",
      journal   = "Phys. Lett. B",
      volume    = "380",
      year      = "1996",
